--- a/share/gpodder/ui/gtk/gpodderwelcome.ui
+++ b/share/gpodder/ui/gtk/gpodderwelcome.ui
@@ -1,93 +1,189 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.38.2 -->
 <!--*- mode: xml -*-->
 <interface>
+  <requires lib="gtk+" version="3.16"/>
   <object class="GtkDialog" id="gPodderWelcome">
-    <property name="default_height">230</property>
-    <property name="default_width">340</property>
-    <property name="modal">True</property>
-    <property name="transient-for">parent_widget</property>
+    <property name="can-focus">False</property>
     <property name="title" translatable="yes">Getting started</property>
+    <property name="modal">True</property>
+    <property name="default-width">340</property>
+    <property name="default-height">230</property>
+    <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog1-vbox">
-        <property name="border_width">2</property>
         <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="margin-start">2</property>
+        <property name="margin-end">2</property>
+        <property name="margin-top">2</property>
+        <property name="margin-bottom">2</property>
         <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkBox" id="vbox1">
-            <property name="border_width">12</property>
-            <property name="spacing">12</property>
-            <property name="visible">True</property>
-            <property name="orientation">vertical</property>
-            <child>
-              <object class="GtkLabel" id="label1">
-                <property name="label" translatable="yes">&lt;big&gt;Welcome to gPodder&lt;/big&gt;</property>
-                <property name="use_markup">True</property>
-                <property name="visible">True</property>
-                <property name="xalign">0.0</property>
-                <property name="yalign">1.0</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel" id="label2">
-                <property name="label" translatable="yes">Your podcast list is empty.</property>
-                <property name="visible">True</property>
-                <property name="xalign">0.0</property>
-                <property name="yalign">0.0</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkBox" id="vbox_buttons">
-                <property name="spacing">6</property>
-                <property name="visible">True</property>
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkButton" id="btnOPML">
-                    <property name="is_focus">True</property>
-                    <property name="label" translatable="yes">Choose from a list of example podcasts</property>
-                    <property name="visible">True</property>
-                    <signal handler="on_show_example_podcasts" name="clicked"/>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton" id="btnAddURL">
-                    <property name="is_focus">True</property>
-                    <property name="label" translatable="yes">Add a podcast by entering its URL</property>
-                    <property name="visible">True</property>
-                    <signal handler="on_add_podcast_via_url" name="clicked"/>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton" id="btnMygPodder">
-                    <property name="label" translatable="yes">Restore my subscriptions from gpodder.net</property>
-                    <property name="visible">True</property>
-                    <signal handler="on_setup_my_gpodder" name="clicked"/>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="position">2</property>
-          </packing>
-        </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog1-action_area">
-            <property name="border_width">5</property>
-            <property name="layout_style">end</property>
-            <property name="spacing">6</property>
+          <object class="GtkButtonBox" id="dialog1-action_area">
             <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="margin-start">5</property>
+            <property name="margin-end">5</property>
+            <property name="margin-top">5</property>
+            <property name="margin-bottom">5</property>
+            <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="btnCancel">
-                <property name="label">gtk-cancel</property>
-                <property name="use_stock">True</property>
+                <property name="label" translatable="yes">_Cancel</property>
                 <property name="visible">True</property>
-                <signal handler="on_btnCancel_clicked" name="clicked"/>
+                <property name="can-focus">True</property>
+                <property name="receives-default">False</property>
+                <property name="use-underline">True</property>
+                <signal name="clicked" handler="on_btnCancel_clicked" swapped="no"/>
               </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">end</property>
+            <property name="fill">False</property>
+            <property name="pack-type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox" id="vbox1">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="margin-start">12</property>
+            <property name="margin-end">12</property>
+            <property name="margin-top">12</property>
+            <property name="margin-bottom">12</property>
+            <property name="orientation">vertical</property>
+            <property name="spacing">12</property>
+            <child>
+              <object class="GtkLabel" id="label1">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="label" translatable="yes">&lt;big&gt;Welcome to gPodder&lt;/big&gt;</property>
+                <property name="use-markup">True</property>
+                <property name="xalign">0</property>
+                <property name="yalign">1</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label2">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="label" translatable="yes">Your podcast list is empty.</property>
+                <property name="xalign">0</property>
+                <property name="yalign">0</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkBox" id="vbox_buttons">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="orientation">vertical</property>
+                <property name="spacing">6</property>
+                <child>
+                  <object class="GtkButton" id="btnOPML">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="has-focus">True</property>
+                    <property name="is-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <signal name="clicked" handler="on_show_example_podcasts" swapped="no"/>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <property name="label" translatable="yes">Choose from a list of example podcasts</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="btnAddURL">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="is-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <signal name="clicked" handler="on_add_podcast_via_url" swapped="no"/>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <property name="label" translatable="yes">Add a podcast by entering its URL</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="btnMygPodder">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="is-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <signal name="clicked" handler="on_setup_my_gpodder" swapped="no"/>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
+                        <property name="margin-top">10</property>
+                        <property name="margin-bottom">10</property>
+                        <property name="label" translatable="yes">Restore my subscriptions from gpodder.net</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
