--- a/share/gpodder/ui/gtk/gpodderconfigeditor.ui
+++ b/share/gpodder/ui/gtk/gpodderconfigeditor.ui
@@ -1,153 +1,148 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.38.2 -->
 <!--*- mode: xml -*-->
 <interface>
+  <requires lib="gtk+" version="3.16"/>
   <object class="GtkDialog" id="gPodderConfigEditor">
     <property name="visible">True</property>
+    <property name="can-focus">False</property>
     <property name="title" translatable="yes">gPodder Configuration Editor</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="modal">True</property>
-    <property name="transient-for">parent_widget</property>
-    <property name="default_width">750</property>
-    <property name="default_height">450</property>
-    <property name="destroy_with_parent">False</property>
-    <property name="skip_taskbar_hint">False</property>
-    <property name="skip_pager_hint">False</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
-    <property name="focus_on_map">True</property>
-    <property name="urgency_hint">False</property>
-    <signal handler="on_gPodderConfigEditor_destroy" name="destroy"/>
+    <property name="window-position">center-on-parent</property>
+    <property name="default-width">750</property>
+    <property name="default-height">450</property>
+    <property name="type-hint">dialog</property>
+    <signal name="destroy" handler="on_gPodderConfigEditor_destroy" swapped="no"/>
     <child internal-child="vbox">
       <object class="GtkBox" id="vbox13">
         <property name="visible">True</property>
-        <property name="homogeneous">False</property>
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox">
+            <property name="can-focus">False</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
         <child>
           <object class="GtkBox" id="vbox_for_episode_selector">
-            <property name="border_width">5</property>
             <property name="visible">True</property>
-            <property name="spacing">5</property>
+            <property name="can-focus">False</property>
+            <property name="border-width">5</property>
             <property name="orientation">vertical</property>
+            <property name="spacing">5</property>
             <child>
               <object class="GtkBox" id="hbox38">
                 <property name="visible">True</property>
-                <property name="homogeneous">False</property>
+                <property name="can-focus">False</property>
                 <property name="spacing">6</property>
-                <property name="orientation">horizontal</property>
                 <child>
                   <object class="GtkLabel" id="label121">
                     <property name="visible">True</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Search for:</property>
-                    <property name="use_underline">False</property>
-                    <property name="use_markup">False</property>
-                    <property name="wrap">False</property>
-                    <property name="selectable">False</property>
-                    <property name="width_chars">-1</property>
-                    <property name="single_line_mode">False</property>
                   </object>
                   <packing>
-                    <property name="padding">0</property>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
+                    <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkEntry" id="entryFilter">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="has_focus">True</property>
-                    <property name="max_length">0</property>
-                    <property name="has_frame">True</property>
-                    <property name="invisible_char">●</property>
-                    <property name="activates_default">False</property>
-                    <signal handler="on_entryFilter_changed" name="changed"/>
+                    <property name="can-focus">True</property>
+                    <property name="has-focus">True</property>
+                    <property name="invisible-char">●</property>
+                    <signal name="changed" handler="on_entryFilter_changed" swapped="no"/>
                   </object>
                   <packing>
-                    <property name="padding">0</property>
                     <property name="expand">True</property>
                     <property name="fill">True</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkButton" id="btnShowAll">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
                     <property name="label" translatable="yes">Show All</property>
-                    <property name="use_underline">True</property>
-                    <property name="focus_on_click">True</property>
-                    <signal handler="on_btnShowAll_clicked" name="clicked"/>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="use-underline">True</property>
+                    <signal name="clicked" handler="on_btnShowAll_clicked" swapped="no"/>
                   </object>
                   <packing>
-                    <property name="padding">0</property>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
               <packing>
-                <property name="padding">0</property>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
               <object class="GtkScrolledWindow" id="scrolledwindow8">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                <property name="shadow_type">GTK_SHADOW_IN</property>
-                <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
+                <property name="can-focus">True</property>
+                <property name="shadow-type">in</property>
                 <child>
                   <object class="GtkTreeView" id="configeditor">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="headers_visible">True</property>
-                    <property name="rules_hint">False</property>
-                    <property name="reorderable">False</property>
-                    <property name="enable_search">True</property>
-                    <property name="fixed_height_mode">False</property>
-                    <property name="hover_selection">False</property>
-                    <property name="hover_expand">False</property>
+                    <property name="can-focus">True</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection"/>
+                    </child>
                   </object>
                 </child>
               </object>
               <packing>
-                <property name="padding">0</property>
                 <property name="expand">True</property>
                 <property name="fill">True</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
           <packing>
-            <property name="padding">0</property>
             <property name="expand">True</property>
             <property name="fill">True</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkHButtonBox" id="hbuttonbox2">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="can-focus">False</property>
+            <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="btnClose">
-                <property name="visible">True</property>
-                <property name="can_default">True</property>
-                <property name="has_default">True</property>
-                <property name="can_focus">True</property>
                 <property name="label">gtk-close</property>
-                <property name="use_stock">True</property>
-                <property name="focus_on_click">True</property>
-                <signal handler="on_btnClose_clicked" name="clicked"/>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="can-default">True</property>
+                <property name="has-default">True</property>
+                <property name="receives-default">False</property>
+                <property name="use-stock">True</property>
+                <signal name="clicked" handler="on_btnClose_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
+                <property name="position">0</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
