--- a/share/gpodder/ui/gtk/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/gtk/gpodderepisodeselector.ui
@@ -20,10 +20,9 @@
             <property name="can-focus">False</property>
             <child>
               <object class="GtkButton" id="btnRemoveAction">
-                <property name="label">Remove</property>
+                <property name="label" translatable="yes">Remove</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">False</property>
-                <property name="use-stock">True</property>
                 <signal name="clicked" handler="on_remove_action_activate" swapped="no"/>
               </object>
               <packing>
@@ -34,11 +33,10 @@
             </child>
             <child>
               <object class="GtkButton" id="btnCancel">
-                <property name="label">gtk-cancel</property>
+                <property name="label" translatable="yes">Cancel</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">False</property>
-                <property name="use-stock">True</property>
                 <signal name="clicked" handler="on_btnCancel_clicked" swapped="no"/>
               </object>
               <packing>
@@ -49,13 +47,12 @@
             </child>
             <child>
               <object class="GtkButton" id="btnOK">
-                <property name="label">gtk-ok</property>
+                <property name="label" translatable="yes">OK</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="can-default">True</property>
                 <property name="has-default">True</property>
                 <property name="receives-default">False</property>
-                <property name="use-stock">True</property>
                 <signal name="clicked" handler="on_btnOK_clicked" swapped="no"/>
               </object>
               <packing>
