--- a/share/gpodder/ui/gtk/gpodderepisodeselector.ui
+++ b/share/gpodder/ui/gtk/gpodderepisodeselector.ui
@@ -138,7 +138,7 @@
                               <object class="GtkImage" id="image2636">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
-                                <property name="stock">gtk-apply</property>
+                                <property name="icon-name">gtk-apply</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -191,7 +191,7 @@
                               <object class="GtkImage" id="image2635">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
-                                <property name="stock">gtk-revert-to-saved</property>
+                                <property name="icon-name">gtk-revert-to-saved</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
